# gmeta

./: AGENTS.md  Cargo.toml  LICENSE-MIT  README.md  entire.md  gh-import-plan.md  gh-import.md  notes.md  spec.md
.claude/: settings.local.json
crates/git-meta-cli/: Cargo.toml  README.md
crates/git-meta-cli/src/: cli.rs  main.rs  pager.rs  style.rs
crates/git-meta-cli/src/bench/: db.rs  history.rs  mod.rs
crates/git-meta-cli/src/commands/: blame.rs  get.rs  hydrate.rs  import.rs  list.rs  log.rs  materialize.rs  mod.rs  promisor.rs  pull.rs  push.rs  remote.rs  rm.rs  serialize.rs  set.rs  setup.rs  show.rs  teardown.rs
crates/git-meta-cli/src/commands/prune/: config.rs
crates/git-meta-cli/tests/e2e/: harness.rs  help.rs  import_gh.rs  list.rs  log.rs  main.rs  materialize.rs  promisor.rs  push_pull.rs  remote.rs  serialize.rs  set_get.rs  setup.rs  version.rs
crates/git-meta-cli/tests/fixtures/: bare-with-history-retained.sh  bare-with-history.sh
crates/git-meta-lib/: Cargo.toml  README.md
crates/git-meta-lib/src/: git_utils.rs  lib.rs  list_value.rs  pull.rs  push.rs  serialize.rs  session.rs  sync.rs  tree_paths.rs
crates/git-meta-lib/src/db/: mod.rs  promised.rs  prune.rs  schema.rs  stats.rs  types.rs
crates/git-meta-lib/src/tree/: filter.rs  format.rs
crates/git-meta-lib/tests/: crud.rs  edge_cases.rs  exchange.rs  handle.rs  merge.rs  serialize.rs  session.rs  value_types.rs
crates/git-meta-lib/tests/helpers/: mod.rs
crates/git-meta-rs/: Cargo.toml  README.md
crates/git-meta-rs/src/: cli.rs  context.rs  main.rs
crates/git-meta-rs/src/bench/: fanout.rs  history.rs  serialize.rs
crates/git-meta-rs/src/commands/: config.rs  inspect.rs  log.rs  materialize.rs  mod.rs  promisor.rs  push.rs  remote.rs  set.rs  show.rs  stats.rs  watch.rs
crates/git-meta-rs/src/commands/prune/: auto.rs  local.rs  tree.rs
crates/git-meta-rs/tests/e2e/: harness.rs  list.rs  main.rs  materialize.rs  promisor.rs  push_pull.rs  remote.rs  serialize.rs  set_get.rs
crates/git-meta-rs/tests/fixtures/: bare-with-meta.sh  basic-repo.sh
crates/gmeta/: Cargo.toml
crates/gmeta-bench/: Cargo.toml
crates/gmeta-bench/src/: db.rs  fanout.rs  history.rs  serialize.rs
crates/gmeta-cli/: Cargo.toml
crates/gmeta-cli/src/: cli.rs  context.rs  main.rs
crates/gmeta-cli/src/commands/: config.rs  get.rs  import.rs  inspect.rs  list.rs  log.rs  materialize.rs  mod.rs  promisor.rs  pull.rs  push.rs  remote.rs  rm.rs  serialize.rs  set.rs  show.rs  stats.rs  teardown.rs  watch.rs
crates/gmeta-cli/src/commands/bench/: db_bench.rs  fanout_bench.rs  history_walker.rs  mod.rs  serialize_bench.rs
crates/gmeta-cli/src/commands/prune/: auto.rs  config.rs  local.rs  mod.rs  tree.rs
crates/gmeta-cli/tests/e2e/: harness.rs  materialize.rs  promisor.rs  push_pull.rs  remote.rs  serialize.rs  set_get.rs
crates/gmeta-core/: Cargo.toml
crates/gmeta-core/src/: db.rs  error.rs  git_utils.rs  lib.rs  list_value.rs  materialize.rs  prune.rs  pull.rs  push.rs  serialize.rs  session.rs  session_handle.rs  sync.rs  tree_paths.rs  types.rs
crates/gmeta-core/src/db/: batch.rs  lists.rs  metadata.rs  mod.rs  promised.rs  prune.rs  schema.rs  sets.rs  stats.rs  sync.rs  target_handle.rs  tombstones.rs  types.rs  value_ops.rs
crates/gmeta-core/src/tree/: filter.rs  format.rs  merge.rs  mod.rs  model.rs
crates/gmeta-core/tests/: crud.rs  edge_cases.rs  exchange.rs  handle.rs  integration.rs  merge.rs  serialize.rs  session.rs  value_types.rs
crates/gmeta-core/tests/helpers/: mod.rs
crates/gmeta/src/: error.rs  git_utils.rs  lib.rs  materialize.rs  prune.rs  push.rs  session.rs  sync.rs  types.rs
crates/gmeta/src/db/: metadata.rs  mod.rs  sets.rs  types.rs  value_ops.rs
crates/gmeta/src/tree/: format.rs  model.rs
crates/gmeta/tests/: crud.rs  edge_cases.rs  exchange.rs  handle.rs  merge.rs  serialize.rs  session.rs  value_types.rs
crates/gmeta/tests/helpers/: mod.rs
docs/: CNAME  app.js  example-serialize.html  index.html  robots.txt  sitemap.xml  styles.css
docs/assets/: style.css
docs/exchange-format/: exchange.html  lists.html  materialization.html  principles.html  sets.html  strings.html  targets.html
docs/implementation/: cli.html  output.html  overview.html  pruning.html  standard-keys.html  storage.html  workflow.html
docs/other/: example-serialize.html
docs/spec/: index.html
docs/spec/assets/: style.css
docs/spec/exchange-format/: exchange.html  lists.html  materialization.html  sets.html  strings.html  targets.html
docs/spec/implementation/: auto-sync.html  cli.html  output.html  overview.html  pruning.html  remotes.html  serialize-filters.html  standard-keys.html  storage.html  workflow.html
notes/: notes.md  prune.md  scaling.md  scenarios.md
scripts/: backlog.rb  generate_docs.py  load-linux.rb  log.rb
spec/: README.md
spec/exchange-format/: exchange.md  lists.md  materialization.md  strings.md  targets.md
spec/implementation/: auto-sync.md  cli.md  output.md  pruning.md  remotes.md  serialize-filters.md  standard-keys.md  storage.md  workflow.md
src/: cli.rs  context.rs  db.rs  git_utils.rs  main.rs  types.rs
src/commands/: auto_prune.rs  bench.rs  config.rs  config_prune.rs  get.rs  import.rs  inspect.rs  list.rs  local_prune.rs  log.rs  materialize.rs  mod.rs  promisor.rs  prune.rs  pull.rs  push.rs  remote.rs  rm.rs  serialize.rs  set.rs  show.rs  stats.rs  teardown.rs  watch.rs
src/commands/bench/: db_bench.rs  history_walker.rs  serialize_bench.rs
src/commands/prune/: auto.rs  config.rs  local.rs  mod.rs  tree.rs
templates/: docs-page.html
tests/: integration.rs
tests/e2e/: harness.rs  list.rs  main.rs  promisor.rs  push_pull.rs
tests/fixtures/: bare-with-history.sh  bare-with-meta.sh
