[workspace]
members = ["crates/gmeta-core", "crates/gmeta-cli"]
resolver = "2"

[workspace.dependencies]
anyhow = "1"
git2 = "0.20"
gix = { version = "0.81.0", default-features = false, features = [
    "sha1", "revision", "merge", "tree-editor",
] }
rusqlite = { version = "0.33", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
sha2 = "0.10"
time = { version = "0.3", features = ["formatting", "parsing", "macros"] }
uuid = { version = "1", features = ["v4"] }

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
