[workspace]
members = ["crates/git-meta-lib", "crates/git-meta-rs"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/git-meta/git-meta"

[workspace.dependencies]
anyhow = "1"
gix = { version = "0.81.0", default-features = false, features = [
    "sha1", "revision", "merge", "tree-editor", "blob-diff",
] }
rusqlite = { version = "0.33", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
thiserror = "2"
time = { version = "0.3", features = ["formatting", "parsing", "macros"] }
uuid = { version = "1", features = ["v4"] }

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
redundant_closure_for_method_calls = "warn"
cloned_instead_of_copied = "warn"
implicit_clone = "warn"
map_unwrap_or = "warn"
uninlined_format_args = "warn"
manual_let_else = "warn"
semicolon_if_nothing_returned = "warn"
