[package]
name = "gmeta-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gmeta"
path = "src/main.rs"

[dependencies]
gmeta-core = { path = "../gmeta-core" }
anyhow = { workspace = true }
clap = { version = "4", features = ["derive"] }
dialoguer = "0.11"
git2 = { workspace = true }
gix = { workspace = true }
notify = "7"
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
assert_cmd = "2"
gix-testtools = "0.18"
predicates = "3"
sha1 = { workspace = true }
tempfile = "3"

[lints]
workspace = true
