[package]
name = "gmeta-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gmeta"
path = "src/main.rs"

[features]
bench = ["dep:gmeta-bench"]

[dependencies]
gmeta-bench = { path = "../gmeta-bench", optional = true }
gmeta = { path = "../gmeta", features = ["internal"] }
anyhow = { workspace = true }
clap = { version = "4", features = ["derive"] }
dialoguer = "0.11"
gix = { workspace = true }
notify = "7"
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
assert_cmd = "2"
gix = { workspace = true }
gix-testtools = "0.18"
predicates = "3"
serde_json = { workspace = true }
sha1 = { workspace = true }
tempfile = "3"

[lints]
workspace = true
