[package]
name = "gmeta-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
git2 = { workspace = true }
gix = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha1 = { workspace = true }
sha2 = { workspace = true }

[lints]
workspace = true
