[package]
name = "gmeta-core"
version = "0.1.0"
edition = "2021"

[dependencies]
gix = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha1 = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }

[lints]
workspace = true
