[package]
name = "gmeta-core"
version = "0.1.0"
edition = "2021"

[features]
## Expose internal plumbing modules for the gmeta CLI.
## Library consumers should NOT enable this feature.
internal = []

[dependencies]
gix = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha1 = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }

[dev-dependencies]
gix = { workspace = true }
tempfile = "3"

[lints]
workspace = true
